--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -12,12 +12,16 @@
     html, body {
       height: 100%;
       margin: 0;
+      padding: 0;
     }
     
     body {
       display: flex;
       flex-direction: column;
       min-height: 100vh;
+      width: 100%;
+      margin: 0;
+      padding: 0;
     }
     
     main {
