Update home template

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -31,6 +31,12 @@
     footer {
       flex-shrink: 0;
     }
+    
+    /* Container styles */
+    .container {
+      width: 100%;
+      padding: 0;
+    }
   </style>
 </head>
 <body>
