--- a/authentication/templates/authentication/base.html
+++ b/authentication/templates/authentication/base.html
@@ -70,7 +70,7 @@
         <div class="auth-header">
             <div class="auth-logo">
                 <a href="{% url 'core:home' %}">
-                    <img src="{% static 'images/logo.png' %}" alt="Logo">
+                    <img src="{% static 'images/logo1.png' %}" alt="Logo">
                 </a>
             </div>
             <div class="auth-text">
