--- a/community_hub/templates/community_hub/base.html
+++ b/community_hub/templates/community_hub/base.html
@@ -294,12 +294,12 @@
     <!-- Sidebar -->
     <div class="sidebar" id="sidebar">
         <!-- <div class="sidebar-header">
-            <img src="{% static 'images/logo.png' %}" alt="Logo" class="sidebar-logo">
+            <img src="{% static 'images/logo1.png' %}" alt="Logo" class="sidebar-logo">
         </div> -->
         <ul class="sidebar-menu">
             <li>
                 <div class="sidebar-logo">
-                    <img src="{% static 'images/logo.png' %}" alt="Logo">
+                    <img src="{% static 'images/logo1.png' %}" alt="Logo">
                 </div>
             </li>
             <li><a href="{% url 'dashboard:home' %}" class="{% if request.resolver_match.url_name == 'home' %}active{% endif %}">
