--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -13,13 +13,13 @@
     padding: 0;
     overflow: hidden;
     width: 100%;
-    min-height: 91vh;
+    min-height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
   }
   main {
-    margin-top: 77px;
+    margin-top: 0;
   }
   .hero-bg {
     position: absolute;
