--- a/templates/emails/base_email.html
+++ b/templates/emails/base_email.html
@@ -15,7 +15,7 @@
       color: #333;
     ">
       <div style="text-align: center; margin-bottom: 30px;">
-        <img src="https://maishagala.com/static/images/logo.png" alt="MaishaGala Logo" style="max-height: 60px;" />
+        <img src="https://maishagala.com/static/images/logo1.png" alt="MaishaGala Logo" style="max-height: 60px;" />
       </div>
       {% block content %}{% endblock %}
     </div>
